# APPredator

./: .gitignore  Dockerfile  Dockerfile.web  README.md  action.yml  apppredator-ci.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apppredator/: __init__.py  __main__.py  bootstrap.py  cli.py  paths.py
config/: settings.yaml.example
config/knowledge_base/: masvs_mapping.json
config/prompts/: app_summary_prompt.txt  attack_surface_prompt.txt  exploit_prompt.txt  identify_risk_prompt.txt  summarize_prompt.txt  system_prompt.txt
config/prompts/vuln_rules/: biometric_bypass.yaml  deeplink_hijack.yaml  deeplink_logic_bypass.yaml  fragment_injection.yaml  (+22 more)
core/: baseline_store.py  cache_store.py  call_graph.py  config_loader.py  engine.py  finding_utils.py  job_logs.py  logger.py  scan_history.py  scan_runner.py  settings_io.py  ssl_pinning_mapper.py
core/reporting/: __init__.py  html_report.py  sarif.py
examples/github-actions/: android-security-scan.yml
modules/decompiler/: apktool_handler.py  jadx_handler.py
modules/llm_client/: deepseek.py  groq.py  openrouter.py
scripts/: start-api.mjs
scripts/ci/: configurator.py  entrypoint.sh
templates/: report.html
tests/: test_accuracy_pipeline.py  test_api_integration.py  test_api_smoke.py  test_sarif_baseline.py
tools/apktool/: apktool-nopause.bat
web/: __init__.py
web/backend/: __init__.py  jobs_store.py  llm_probe.py  main.py  scan_worker.py
web/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+21 files in other folders)
